@@ -3,6 +3,8 @@ fixtures:
   repositories:
     stdlib: https://github.com/simp/puppetlabs-stdlib.git
     simplib: https://github.com/simp/pupmod-simp-simplib.git
-    systemd: https://github.com/simp/puppet-systemd.git
+    systemd:
+      repo: https://github.com/simp/puppet-systemd.git
+      branch: simp-master
   symlinks:
     haveged: "#{source_dir}"
