@@ -1,3 +1,7 @@
+* Mon Jun 06 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.9.1
+- Fixed:
+  - Remove deprecated `daemon_reload` parameter from `systemd::dropin_file`
+
 * Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.9.0
 - Update from camptocamp/systemd to puppet/systemd
 
